objects/Transaction__c.object
<CustomObject>
    <description>A custom object for storing the transaction details in the EzyCharge.</description>
    <fields>
        <fullName>Actual_Transaction_Date__c</fullName>
        <label>Actual Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Failed_Reason__c</fullName>
        <label>Failed Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gateway_Name__c</fullName>
        <label>Gateway Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Payment</label>
        <referenceTo>Recurring_Payment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>First Transaction Failure</fullName>
                </value>
                <value>
                    <fullName>Second Transaction Failure</fullName>
                </value>
                <value>
                    <fullName>Permanent Transaction Failure</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gateway_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Paid,PENDING</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>One_Time_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.One_Time</value>
        </filters>
        <label>One Time Transactions</label>
    </listViews>
    <listViews>
        <fullName>Pending_transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>PENDING</value>
        </filters>
        <label>Pending Transactions</label>
    </listViews>
    <listViews>
        <fullName>Recurring_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Recurring_Payment__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Recurring</value>
        </filters>
        <label>Recurring Transactions</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Failed_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>notEqual</operation>
            <value>Scheduled,Paid,PENDING</value>
        </filters>
        <label>Today&apos;s Failed Transactions</label>
    </listViews>
    <listViews>
        <fullName>Todays_Payment</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Today&apos;s Paid Transaction</label>
    </listViews>
    <listViews>
        <fullName>Transaction_in_Last_day_s</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Transaction in Last Week</label>
    </listViews>
    <listViews>
        <fullName>Transaction_in_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>Transaction in Next Week</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Failed_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>notEqual</operation>
            <value>Scheduled,Paid,PENDING</value>
        </filters>
        <label>Yesterday&apos;s Failed Transactions</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Paid_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Yesterday&apos;s Paid Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>SF Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>One_Time</fullName>
        <active>true</active>
        <description>Transaction record for one time payment.</description>
        <label>One Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recurring</fullName>
        <active>true</active>
        <description>Transaction record for recurring payments.</description>
        <label>Recurring</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>